#5 use java concurrent hashamp instead of guava custom map for connections